--- a/Me.html
+++ b/Me.html
@@ -27,6 +27,7 @@
             <a href="#menu" id="toggle"><span></span></a>
             <div id="menu">
                 <ul style="margin-top: 14%;">
+                    <li><a href="Par-landing.html">PAR Landing Page</a></li>
                     <li><a href="Dashboard.html">IMS Dashboard</a></li>
                     <li><a href="AEA.html">AEA Academy</a></li>
                     <li><a href="scheduler.html">Job Scheduler</a></li>
