--- a/Me.html
+++ b/Me.html
@@ -67,27 +67,27 @@
                     <h3 class="text-dark fontline">UI/UX DESIGN & FRONT END</h3>
                 </div>
                 <div class="col-md-10 col-lg-9 mx-auto d-flex">
-                    <div class="col-md-6 m-0 p-1">
+                    <div class="col-md-6 m-0 p-0 pr-1" style="max-height:644px;">
                         <a href="AEA.html">
-                            <img src="images/aea-front.jpg" class="product-front" style="width: 100%;height: 580px;block-size: auto;"/>
+                            <img src="images/aea-front.jpg" class="product-front" style="width: 100%;height:100%;"/>
                         </a>
                     </div>
-                    <div class="col-md-6 m-0 py-1 px-0">
-                        <div class="col-md-12 m-0 p-0 d-flex">
-                            <div class="col-md-6 m-0 pl-0 pr-1 py-0">
+                    <div class="col-md-6 m-0 p-0">
+                        <div class="col-md-12 m-0 p-0 pb-1 d-flex" style="max-height: 322px;">
+                            <div class="col-md-6 m-0 p-0">
                                 <a href="PAR.html">
-                                    <img src="images/par-front.jpg" class="product-front" style="width: 100%;height: 100%; max-height:320px !important ;block-size: auto;"/>
+                                    <img src="images/par-front.jpg" class="product-front" style="width: 100%;height: 100%;"/>
                                 </a>
                             </div>
-                            <div class="col-md-6 m-0 px-0 py-0">
+                            <div class="col-md-6 m-0 p-0 pl-1">
                                 <a href="Dashboard.html">
-                                    <img src="images/dashboard-front.jpg" class="product-front" style="width: 100%;height: 100%; max-height:320px !important ;block-size: auto;"/>
+                                    <img src="images/dashboard-front.jpg" class="product-front" style="width: 100%;height: 100%;"/>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-12 m-0 pt-1 px-0 pb-0 ">
+                        <div class="col-md-12 m-0 p-0" >
                             <a href="scheduler.html">
-                                <img src="images/scheduler-front.jpg" class="product-front" style="width: 100%;height: 100%; max-height:319px !important ;block-size: auto;"/>
+                                <img src="images/scheduler-front.jpg" class="product-front" style="width: 100%;height: 100%; max-height: 322px;"/>
                             </a>
                         </div>
                     </div>
@@ -101,22 +101,21 @@
                     <h3 class="text-dark fontline">UI & BRANDING REDESIGN</h3>
                 </div>
                 <div class="col-md-10 col-lg-9 mx-auto d-flex">
-                    
-                    <div class="col-md-6 m-0 py-1 px-0">
-                        <div class="col-md-12 m-0 p-0 d-flex">
+                    <div class="col-md-6 m-0 p-0 pr-1">
+                        <div class="col-md-12 m-0 p-0 pb-1 d-flex" style="max-height: 322px;">
                             <a href="Par-landing.html" style="width: inherit;">
-                                <img src="images/par-landing-front.jpg" class="product-front" style="width: 100%;height: 100%; max-height:319px !important ;block-size: auto;"/>
+                                <img src="images/par-landing-front.jpg" class="product-front" style="width: 100%;height: 100%;"/>
                             </a>
                         </div>
-                        <div class="col-md-12 m-0 pt-1 px-0 pb-0 ">
+                        <div class="col-md-12 m-0 p-0">
                             <a href="DesertSoftware.html">
-                                <img src="images/desert-front.jpg" class="product-front" style="width: 100%;height: 100%; max-height:319px !important ;block-size: auto;"/>
+                                <img src="images/desert-front.jpg" class="product-front" style="width: 100%;height: 100%;max-height: 322px;"/>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6 m-0 p-1">
+                    <div class="col-md-6 m-0 p-0" style="max-height:644px;">
                         <a href="MoreWork.html">
-                            <img src="images/brand-front.jpg" class="product-front" style="width: 100%;height: 580px;block-size: auto;"/>
+                            <img src="images/brand-front.jpg" class="product-front" style="width: 100%;height: 100%;"/>
                         </a>
                     </div>
                 </div>
