--- a/MAP.html
+++ b/MAP.html
@@ -1139,7 +1139,7 @@
                     <div class="col-md-12 mt-3">
                         <h3 class="text-dark" style="font-weight: 600">Digital Customer Blueprint</h3>
                     </div>
-                    <a href="AEA.html" role="button" class="btn mx-auto badge-pill bg-white my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-dark" style="margin-top:6px"></i></a>
+                    <a href="DCB.html" role="button" class="btn mx-auto badge-pill bg-white my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-dark" style="margin-top:6px"></i></a>
                 </div>
             </div>
         </div>
