--- a/Me.html
+++ b/Me.html
@@ -128,11 +128,15 @@
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="" aria-hidden="true">
+                    <img src="images/left_arrow.svg">
+                  </span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="" aria-hidden="true">
+                    <img src="images/right_arrow.svg">
+                  </span>
                   <span class="sr-only">Next</span>
                 </a>
               </div>
