--- a/DCB.html
+++ b/DCB.html
@@ -32,7 +32,7 @@
                     </p>
                     <li><a href="MAP.html">Mergers & Acquisitions Path</a></li>
                     <li><a href="DCB.html">Digital Customer Blueprint</a></li>
-                    <li><a href="#">Engagement Pulse</a></li>
+                    <li><a href="Pulse.html">Engagement Pulse</a></li>
                     <li><a href="#">Perform Engagement</a></li>
                     <!-- <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
@@ -1110,11 +1110,15 @@
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="" aria-hidden="true">
+                        <img src="images/left_arrow.svg">
+                      </span>
                       <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="" aria-hidden="true">
+                        <img src="images/right_arrow.svg">
+                      </span>
                       <span class="sr-only">Next</span>
                     </a>
                 </div>
@@ -1130,7 +1134,7 @@
                     <div class="col-md-12 mt-3">
                         <h3 class="text-dark" style="font-weight: 600">Engagement Pulse</h3>
                     </div>
-                    <a href="#" role="button" class="btn mx-auto badge-pill bg-white my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-dark" style="margin-top:6px"></i></a>
+                    <a href="Pulse.html" role="button" class="btn mx-auto badge-pill bg-white my-3" style="width: 44px; height: 44px"><i class="fas fa-long-arrow-alt-right text-dark" style="margin-top:6px"></i></a>
                 </div>
             </div>
         </div>
