--- a/Me.html
+++ b/Me.html
@@ -30,7 +30,7 @@
                     </p>
                     <li><a href="MAP.html">Mergers & Acquisitions Path</a></li>
                     <li><a href="DCB.html">Digital Customer Blueprint</a></li>
-                    <li><a href="#">Engagement Pulse</a></li>
+                    <li><a href="Pulse.html">Engagement Pulse</a></li>
                     <li><a href="#">Perform Engagement</a></li>
                     <!-- <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
@@ -83,7 +83,7 @@
             </div>
             <div class="d-flex fade" style="margin-bottom: 24px;">
                 <div >
-                    <a href="#">
+                    <a href="Pulse.html">
                         <img src="images/pulse_front_img.svg" class="product-front" style="width: 100%; height:100%;"/>
                     </a>
                 </div>
