--- a/Pulse.html
+++ b/Pulse.html
@@ -33,7 +33,7 @@
                     <li><a href="MAP.html">Mergers & Acquisitions Path</a></li>
                     <li><a href="DCB.html">Digital Customer Blueprint</a></li>
                     <li><a href="Pulse.html">Engagement Pulse</a></li>
-                    <li><a href="#">Perform Engagement</a></li>
+                    <li><a href="ChatPwC.html">ChatPwC</a></li>
                     <!-- <li><a href="PAR.html">Pistol Attendance Record</a></li>
                     <li><a href="DesertSoftware.html">Desert Software</a></li>
                     <li><a href="About.html">Profile</a></li> -->
@@ -94,7 +94,7 @@
                             <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Outdated and Inefficient Design and Experience</h5>
                             <p class=" text-left text-dark mb-3" style="font-size: 16px !important;">
                                 The current Engagement Pulse platform, despite its valuable real-time insights, suffers from a 
-                                poorly designed user interface and user experience. Users find the platform difficult to 
+                                poorly designed user interface and user experience with no intelligent insights. Users find the platform difficult to 
                                 navigate, with an outdated design that hampers their ability to efficiently understand and act 
                                 on the data provided. Feedback indicates frustration with the cluttered layout, inconsistent 
                                 visual elements, and lack of intuitive functionality, leading to a decline in user engagement 
@@ -102,15 +102,14 @@
                             </p>
                         </div>
                         <div class="my-4">
-                            <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Revamping for Enhanced Usability and User Satisfaction</h5>
+                            <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Revamping for Enhanced Usability with AI-powered Solution</h5>
                             <p class=" text-left text-dark mb-3" style="font-size: 16px !important;">
-                                The primary goal of this project is to revamp the Engagement Pulse platform to enhance its 
-                                usability and visual appeal. By implementing a modern, user-centric design, we aim to create 
-                                an intuitive and seamless experience for users, enabling them to effortlessly access and interpret 
-                                insights. Key objectives include simplifying navigation, standardizing visual elements, and 
-                                integrating interactive features that facilitate engagement. Ultimately, the revamped platform 
-                                will drive higher user satisfaction and ensure that users can effectively leverage real-time 
-                                insights to improve their team's daily experiences.
+                                The primary goal of this project is to revamp the platform by enhancing usability, visual appeal, and AI-powered capabilities. 
+                                By implementing a modern, user-centric design, we aim to create an intuitive experience where users can seamlessly access and 
+                                interpret insights. Key objectives include simplifying navigation, standardizing visual elements, and integrating interactive 
+                                features, alongside AI-driven analytics for smarter survey recommendations and automated data interpretation. The enhanced 
+                                platform will not only drive higher user satisfaction but also empower users with predictive insights, enabling them to 
+                                make more informed decisions and improve their team's daily experiences effortlessly.
                             </p>
                         </div>
                     </div>
@@ -159,8 +158,8 @@
                         <div class="my-3">
                             <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Intuitive Navigation</h5>
                             <p class=" text-left text-dark mb-3" style="font-size: 16px !important;">
-                                Users struggle to locate relevant features and information due to a unclear navigation system. This results in 
-                                frustration and inefficient use of the platform, highlighting the need for a more straightforward navigation structure.
+                                Users struggle to locate relevant features due to an unclear navigation system, leading to frustration and inefficiency. 
+                                A more structured layout, combined with AI-powered search and smart recommendations, is needed to improve discoverability.
                             </p>
                         </div>
                         <div class="my-3">
@@ -178,11 +177,10 @@
                             </p>
                         </div>
                         <div class="my-3">
-                            <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Efficient Data Visualization</h5>
+                            <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">AI-Powered Data Visualization</h5>
                             <p class=" text-left text-dark mb-3" style="font-size: 16px !important;">
-                                Users require more effective and engaging ways to visualize data, allowing them to easily understand insights and take 
-                                appropriate actions. Improved data visualization techniques are essential for better comprehension and utilization of 
-                                information.
+                                Users need more effective ways to visualize data. AI-generated insights, automated trend detection, and interactive 
+                                visualizations will enable users to extract key takeaways effortlessly, improving comprehension and decision-making.
                             </p>
                         </div>
                         <div class="my-3">
@@ -193,10 +191,10 @@
                             </p>
                         </div>
                         <div class="my-3">
-                            <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Interactive Features</h5>
+                            <h5 class="text-dark" style="font-weight: 500; font-size: 20px !important;">Interactive & Personalized Features</h5>
                             <p class="text-left text-dark mb-3" style="font-size: 16px !important;">
-                                Users desire more interactive elements, such as filters and customizable dashboards, to tailor their experience and 
-                                extract relevant information efficiently. Enhanced interactivity will enable users to better personalize their interactions 
+                                Users seek more customization options, such as interactive filters and AI-driven personalized dashboards, to tailor 
+                                their experience. AI recommendations can proactively surface relevant insights, allowing users to engage more efficiently 
                                 with the platform.
                             </p>
                         </div>
@@ -390,7 +388,7 @@
                                 <div>
                                     <img src="images/no2_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        The new metrics display prominently displays current project and team scores, along with completion rates, providing immediate insights.
+                                        The new metrics display prominently current project and team scores with AI analysis targeting the cause of any abnormal trend.
                                     </span>
                                 </div>
                                 <div>
@@ -402,7 +400,7 @@
                                 <div>
                                     <img src="images/no4_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        The new section features a more organised layout with clear headings. It includes actionable links, enhancing user interaction and providing more resources.
+                                        The new section features a more organised layout with clear headings. Enpowered by AI analysis, it recommends relevant links and resources for targeted improvement.
                                     </span>
                                 </div>
                             </div>
@@ -557,7 +555,7 @@
                                 <div>
                                     <img src="images/no3_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        Simplified layout for both the side drawer and main question section, cleaner with less text, reducing cognitive load and improving readability.
+                                        Simplified layout with GenAI capabilities to help draft questions and choices, with the ease to create quality question with one click.
                                     </span>
                                 </div>
                             </div>
@@ -700,7 +698,7 @@
                                 <div>
                                     <img src="images/no1_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        Improved visual hierarchy clearly separates different sections, making it easier for users to navigate and understand the survey results.
+                                        Improved visual hierarchy clearly separates different sections, with AI-powered score indicator and suggestions for unhealthy low score.
                                     </span>
                                 </div>
                                 <div>
@@ -718,7 +716,7 @@
                                 <div>
                                     <img src="images/no4_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        The new design maintains consistency in fonts, colours, and layout, providing a more cohesive and professional look.
+                                        AI Predictive Analysis summarises the key insights of this engagement and provide forecast and recommendations for a better team engagement in the future. 
                                     </span>
                                 </div>
                             </div>
@@ -780,7 +778,7 @@
                                 <div>
                                     <img src="images/no2_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        The new chart design is more structured and organised, with the clear label, which makes it easier to interpret the data.
+                                        The new chart design is more structured and organised, with the ability to show AI corecasting score based on recent trends.
                                     </span>
                                 </div>
                                 <div>
@@ -980,13 +978,13 @@
                                 <div>
                                     <img src="images/no1_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        The use of expandable accordions indicated by icons help users to quickly understand the action, the greyed background also improves readability.
+                                        The use of AI search improves the usability and accuracy and allows users to ask more than just the fiexed questions.
                                     </span>
                                 </div>
                                 <div>
                                     <img src="images/no2_sm-green.svg" style="width: auto; margin-right: 4px;">
                                     <span style="font-size: 14px !important;">
-                                        Added search bar provides users a quicker way to find the relative topics they need.
+                                        AI populates the commonly asked questions for users to provide a quicker way to find the relative topics they need.
                                     </span>
                                 </div>
                                 
